// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MyOverview /> renders correctly when there are no orders 1`] = `
Array [
  <div
    className="row:title"
  >
    <nav
      className="breadcrumbs breadcrumbs--mobile"
      data-testid="breadcrumbs"
    >
      <ul
        className="breadcrumbs__list"
      >
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/account/my-details"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            <i
              className="icon -teal"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <polyline
                  points="328 112 184 256 328 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "round",
                      "strokeLinejoin": "round",
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            Back to 
            My Account
          </a>
        </li>
      </ul>
    </nav>
    <nav
      className="breadcrumbs breadcrumbs--desktop"
      data-testid="breadcrumbs"
    >
      <ul
        className="breadcrumbs__list"
      >
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            Home
          </a>
          <i
            className="icon -medium -xsmall"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="184 112 328 256 184 400"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </li>
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/account/my-details"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            My Account
          </a>
          <i
            className="icon -medium -xsmall"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="184 112 328 256 184 400"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </li>
        <li
          className="breadcrumbs__item"
        >
          <span
            className="text breadcrumbs__text -small -darker"
          >
            My Orders
          </span>
        </li>
      </ul>
    </nav>
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Orders
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <section
      className="row:cards-1col wishlist"
    >
      <div
        className="card -message -flex-h"
      >
        <div
          className="row:lead-text -m-300"
        >
          <span
            className="text -m -lead -darker"
          >
            Your orders list is empty right now.
          </span>
          <p
            className="heading -darker -lead"
          />
        </div>
      </div>
    </section>
  </div>,
]
`;

exports[`<MyOverview /> renders correctly with loading 1`] = `
Array [
  <div
    className="row:title"
  >
    <nav
      className="breadcrumbs breadcrumbs--mobile"
      data-testid="breadcrumbs"
    >
      <ul
        className="breadcrumbs__list"
      >
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/account/my-details"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            <i
              className="icon -teal"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <polyline
                  points="328 112 184 256 328 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "round",
                      "strokeLinejoin": "round",
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            Back to 
            My Account
          </a>
        </li>
      </ul>
    </nav>
    <nav
      className="breadcrumbs breadcrumbs--desktop"
      data-testid="breadcrumbs"
    >
      <ul
        className="breadcrumbs__list"
      >
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            Home
          </a>
          <i
            className="icon -medium -xsmall"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="184 112 328 256 184 400"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </li>
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/account/my-details"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            My Account
          </a>
          <i
            className="icon -medium -xsmall"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="184 112 328 256 184 400"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </li>
        <li
          className="breadcrumbs__item"
        >
          <span
            className="text breadcrumbs__text -small -darker"
          >
            My Quotes
          </span>
        </li>
      </ul>
    </nav>
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <div
        className="loading -large"
      >
        <svg
          className="loading--svg"
          viewBox="-75 -75 150 150"
        >
          <circle
            className="loading--stroke"
            cx="0"
            cy="0"
            r="37.5"
          />
        </svg>
      </div>
    </div>
  </div>,
]
`;

exports[`<MyOverview /> renders orders correctly with data 1`] = `
Array [
  <div
    className="row:title"
  >
    <nav
      className="breadcrumbs breadcrumbs--mobile"
      data-testid="breadcrumbs"
    >
      <ul
        className="breadcrumbs__list"
      >
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/account/my-details"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            <i
              className="icon -teal"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <polyline
                  points="328 112 184 256 328 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "round",
                      "strokeLinejoin": "round",
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            Back to 
            My Account
          </a>
        </li>
      </ul>
    </nav>
    <nav
      className="breadcrumbs breadcrumbs--desktop"
      data-testid="breadcrumbs"
    >
      <ul
        className="breadcrumbs__list"
      >
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            Home
          </a>
          <i
            className="icon -medium -xsmall"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="184 112 328 256 184 400"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </li>
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/account/my-details"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            My Account
          </a>
          <i
            className="icon -medium -xsmall"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="184 112 328 256 184 400"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </li>
        <li
          className="breadcrumbs__item"
        >
          <span
            className="text breadcrumbs__text -small -darker"
          >
            My Orders
          </span>
        </li>
      </ul>
    </nav>
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Orders
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <div
        className="choice-boxes -cols-3 -teal"
      >
        <button
          className="choice-box -active"
          onClick={[Function]}
          type="button"
        >
          All Orders
        </button>
        <button
          className="choice-box"
          onClick={[Function]}
          type="button"
        >
          Completed
        </button>
      </div>
      <span
        className="text -regular -darker"
      >
        Showing 
        2
         Orders
      </span>
      <div
        className="select"
      >
        <select
          className="select--native"
          onChange={[Function]}
          value="availability_ASC"
        >
          <option
            disabled={true}
            value=""
          >
            Please Select
          </option>
          <option
            value="availability_ASC"
          >
            Newest To Oldest
          </option>
          <option
            value="availability_DESC"
          >
            Oldest To Newest
          </option>
          <option
            value="rate_DESC"
          >
            Price low to high
          </option>
          <option
            value="rate_ASC"
          >
            Price high to low
          </option>
        </select>
        <span
          className="icon select--chevron"
        >
          <i
            className="icon -stroke -dark"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="112 184 256 328 400 184"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </span>
      </div>
      <div
        className="row:cards-1col"
      >
        <div
          className="card card--order -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <div
            className="image card-image -expand -plain"
          >
            <span
              style={
                Object {
                  "background": "none",
                  "border": 0,
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": "initial",
                  "left": 0,
                  "margin": 0,
                  "opacity": 1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "initial",
                }
              }
            >
              <img
                className="image--native"
                data-nimg="fill"
                data-testid="card-image"
                decoding="async"
                onError={[Function]}
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style={
                  Object {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": "cover",
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
              <noscript>
                <img
                  className="image--native"
                  data-nimg="fill"
                  data-testid="card-image"
                  decoding="async"
                  loading="lazy"
                  onError={[Function]}
                  sizes="100vw"
                  src="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=3840&q=60"
                  srcSet="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=3840&q=60 3840w"
                  style={
                    Object {
                      "border": "none",
                      "bottom": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": 0,
                      "left": 0,
                      "margin": "auto",
                      "maxHeight": "100%",
                      "maxWidth": "100%",
                      "minHeight": "100%",
                      "minWidth": "100%",
                      "objectFit": "cover",
                      "objectPosition": undefined,
                      "padding": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": 0,
                    }
                  }
                />
              </noscript>
            </span>
          </div>
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (inc. VAT)
            </span>
            <span>
              Contract Length
               
              36 months
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintenance
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Colour
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <div
                className="price--inner"
              >
                <span
                  className="price--sub"
                >
                  £
                </span>
                <span
                  className="price--pounds"
                >
                  100
                </span>
                <span
                  className="price--sub"
                >
                  .
                  00
                </span>
              </div>
              <div
                className="price--label"
              >
                Per Month Inc.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                View Order
              </div>
            </button>
          </div>
        </div>
        <div
          className="card card--order -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <div
            className="image card-image -expand -plain"
          >
            <span
              style={
                Object {
                  "background": "none",
                  "border": 0,
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": "initial",
                  "left": 0,
                  "margin": 0,
                  "opacity": 1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "initial",
                }
              }
            >
              <img
                className="image--native"
                data-nimg="fill"
                data-testid="card-image"
                decoding="async"
                onError={[Function]}
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style={
                  Object {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": "cover",
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
              <noscript>
                <img
                  className="image--native"
                  data-nimg="fill"
                  data-testid="card-image"
                  decoding="async"
                  loading="lazy"
                  onError={[Function]}
                  sizes="100vw"
                  src="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=3840&q=60"
                  srcSet="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=3840&q=60 3840w"
                  style={
                    Object {
                      "border": "none",
                      "bottom": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": 0,
                      "left": 0,
                      "margin": "auto",
                      "maxHeight": "100%",
                      "maxWidth": "100%",
                      "minHeight": "100%",
                      "minWidth": "100%",
                      "objectFit": "cover",
                      "objectPosition": undefined,
                      "padding": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": 0,
                    }
                  }
                />
              </noscript>
            </span>
          </div>
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (ex. VAT)
            </span>
            <span>
              Contract Length
               
              36 months
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintenance
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Colour
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <div
                className="price--inner"
              >
                <span
                  className="price--sub"
                >
                  £
                </span>
                <span
                  className="price--pounds"
                >
                  100
                </span>
                <span
                  className="price--sub"
                >
                  .
                  00
                </span>
              </div>
              <div
                className="price--label"
              >
                Per Month Ex.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                View Order
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<MyOverview /> renders quotes correctly with data 1`] = `
Array [
  <div
    className="row:title"
  >
    <nav
      className="breadcrumbs breadcrumbs--mobile"
      data-testid="breadcrumbs"
    >
      <ul
        className="breadcrumbs__list"
      >
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/account/my-details"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            <i
              className="icon -teal"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <polyline
                  points="328 112 184 256 328 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "round",
                      "strokeLinejoin": "round",
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            Back to 
            My Account
          </a>
        </li>
      </ul>
    </nav>
    <nav
      className="breadcrumbs breadcrumbs--desktop"
      data-testid="breadcrumbs"
    >
      <ul
        className="breadcrumbs__list"
      >
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            Home
          </a>
          <i
            className="icon -medium -xsmall"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="184 112 328 256 184 400"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </li>
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link link -teal -small"
            data-menu={null}
            data-testid="router-link"
            href="/account/my-details"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOver={[Function]}
          >
            My Account
          </a>
          <i
            className="icon -medium -xsmall"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="184 112 328 256 184 400"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </li>
        <li
          className="breadcrumbs__item"
        >
          <span
            className="text breadcrumbs__text -small -darker"
          >
            My Quotes
          </span>
        </li>
      </ul>
    </nav>
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <span
        className="text -regular -darker"
      >
        Showing 
        2
         Orders
      </span>
      <div
        className="select"
      >
        <select
          className="select--native"
          onChange={[Function]}
          value="availability_ASC"
        >
          <option
            disabled={true}
            value=""
          >
            Please Select
          </option>
          <option
            value="availability_ASC"
          >
            Newest To Oldest
          </option>
          <option
            value="availability_DESC"
          >
            Oldest To Newest
          </option>
          <option
            value="rate_DESC"
          >
            Price low to high
          </option>
          <option
            value="rate_ASC"
          >
            Price high to low
          </option>
        </select>
        <span
          className="icon select--chevron"
        >
          <i
            className="icon -stroke -dark"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="112 184 256 328 400 184"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </span>
      </div>
      <div
        className="row:cards-1col"
      >
        <div
          className="card card--order -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <div
            className="image card-image -expand -plain"
          >
            <span
              style={
                Object {
                  "background": "none",
                  "border": 0,
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": "initial",
                  "left": 0,
                  "margin": 0,
                  "opacity": 1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "initial",
                }
              }
            >
              <img
                className="image--native"
                data-nimg="fill"
                data-testid="card-image"
                decoding="async"
                onError={[Function]}
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style={
                  Object {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": "cover",
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
              <noscript>
                <img
                  className="image--native"
                  data-nimg="fill"
                  data-testid="card-image"
                  decoding="async"
                  loading="lazy"
                  onError={[Function]}
                  sizes="100vw"
                  src="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=3840&q=60"
                  srcSet="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=3840&q=60 3840w"
                  style={
                    Object {
                      "border": "none",
                      "bottom": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": 0,
                      "left": 0,
                      "margin": "auto",
                      "maxHeight": "100%",
                      "maxWidth": "100%",
                      "minHeight": "100%",
                      "minWidth": "100%",
                      "objectFit": "cover",
                      "objectPosition": undefined,
                      "padding": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": 0,
                    }
                  }
                />
              </noscript>
            </span>
          </div>
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (inc. VAT)
            </span>
            <span>
              Contract Length
               
              36 months
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintenance
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Colour
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <div
                className="price--inner"
              >
                <span
                  className="price--sub"
                >
                  £
                </span>
                <span
                  className="price--pounds"
                >
                  100
                </span>
                <span
                  className="price--sub"
                >
                  .
                  00
                </span>
              </div>
              <div
                className="price--label"
              >
                Per Month Inc.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                Continue To Order
              </div>
            </button>
          </div>
        </div>
        <div
          className="card card--order -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <div
            className="image card-image -expand -plain"
          >
            <span
              style={
                Object {
                  "background": "none",
                  "border": 0,
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": "initial",
                  "left": 0,
                  "margin": 0,
                  "opacity": 1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "initial",
                }
              }
            >
              <img
                className="image--native"
                data-nimg="fill"
                data-testid="card-image"
                decoding="async"
                onError={[Function]}
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style={
                  Object {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": "cover",
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
              <noscript>
                <img
                  className="image--native"
                  data-nimg="fill"
                  data-testid="card-image"
                  decoding="async"
                  loading="lazy"
                  onError={[Function]}
                  sizes="100vw"
                  src="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=3840&q=60"
                  srcSet="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FvehiclePlaceholder.jpg&w=3840&q=60 3840w"
                  style={
                    Object {
                      "border": "none",
                      "bottom": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": 0,
                      "left": 0,
                      "margin": "auto",
                      "maxHeight": "100%",
                      "maxWidth": "100%",
                      "minHeight": "100%",
                      "minWidth": "100%",
                      "objectFit": "cover",
                      "objectPosition": undefined,
                      "padding": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": 0,
                    }
                  }
                />
              </noscript>
            </span>
          </div>
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (ex. VAT)
            </span>
            <span>
              Contract Length
               
              36 months
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintenance
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Colour
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <div
                className="price--inner"
              >
                <span
                  className="price--sub"
                >
                  £
                </span>
                <span
                  className="price--pounds"
                >
                  100
                </span>
                <span
                  className="price--sub"
                >
                  .
                  00
                </span>
              </div>
              <div
                className="price--label"
              >
                Per Month Ex.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                Continue To Order
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
